fix(wip): remove scrollbar styples

--- a/src/App.css
+++ b/src/App.css
@@ -15,25 +15,6 @@ label span {
   top: -1px;
   right: 20px;
 }
-
-::-webkit-scrollbar {
-  width: 9px;
-}
-::-webkit-scrollbar-track {
-  background: transparent;
-}
-::-webkit-scrollbar-thumb {
-  background-color: #ffffff77;
-  border-radius: 20px;
-  border: 1px dashed whitesmoke;
-}
-
-:focus-within::-webkit-scrollbar-thumb {
-  background-color: #ffffff77;
-  border-radius: 20px;
-  border: 1px dashed gold;
-}
-
 .fadingImage img {
   max-height: 100%;
 }
